flux/apps/wailord/gateway-svcs/cilium-gateways/app/resources/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-internal
spec:
  controllerName: io.cilium/gateway-controller
  description: "The internal gateway. Isn't externally accessible."

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    cert-manager.io/issuer: letsencrypt-cloudflare-issuer
spec:
  addresses:
  - type: IPAddress
    value: 192.168.42.67
  gatewayClassName: cilium-internal
  listeners:
  - name: web-gw
    port: 80
    protocol: HTTP
  - name: websecure-gw
    protocol: HTTPS
    port: 443
    hostname: "*.jsck.network"
    allowedRoutes:
      namespaces:
        from: "All"
    tls:
      certificateRefs:
      - name: jsck-network-tls
