flux/apps/wailord/gateway-svcs/cilium-gateways/app/resources/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-external
spec:
  controllerName: io.cilium/gateway-controller
  description: "External gateway. Publicly exposed"

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-issuer
spec:
  addresses:
  - type: IPAddress
    value: 192.168.42.69
  gatewayClassName: cilium-external
  listeners:
  - name: web-gw
    port: 80
    protocol: HTTP
  - name: websecure-gw
    protocol: HTTPS
    port: 443
    hostname: "*.jackhil.de"
    allowedRoutes:
      namespaces:
        from: "All"
    tls:
      mode: Terminate
      certificateRefs:
      - name: jackhil-de-tls

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cilium-external-http-filter-redirect
spec:
  parentRefs:
  - name: cilium-internal
    sectionName: web-gw
  hostnames:
  - "*.jackhil.de"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
